--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -89,11 +89,10 @@
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="92dp"
+        android:layout_height="92dp"
         android:layout_marginTop="100dp"
         android:background="@drawable/button"
-        android:gravity="center_vertical|center_horizontal|bottom"
         android:onClick="runCounter" />
 
 </LinearLayout>
