--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content" >
 
                 <TextView
-                    android:id="@+id/TextView01"
+                    android:id="@+id/lbl_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/fecha" />
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content" >
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/lbl_hour"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/hora" />
@@ -73,7 +73,7 @@
                 android:layout_height="wrap_content" >
 
                 <TextView
-                    android:id="@+id/txt_total"
+                    android:id="@+id/lbl_total"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/total" />
