--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -4,9 +4,14 @@
     tools:context="com.example.counter.MainActivity" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/categories"
+        android:orderInCategory="1"
+        android:icon="@android:drawable/star_on"
+        android:title="@string/categories"/>
+    
+    <item
+        android:id="@+id/exit"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never"/>
-
+        android:title="@string/exit"/>
+    
 </menu>
