--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -88,7 +88,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/btn_new_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
