--- a/res/layout/activity_categories.xml
+++ b/res/layout/activity_categories.xml
@@ -12,7 +12,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+	android:layout_height="wrap_content" 
+	android:descendantFocusability="beforeDescendants"
+	android:focusableInTouchMode="true" >
 
         <EditText
             android:id="@+id/txt_category"
@@ -20,14 +22,16 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:text="@string/name_category" />
+	    android:text="@string/name_category"
+	    android:focusable="false" 
+	    android:selectAllOnFocus="true" />
 
         <Button
             android:id="@+id/btn_new_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="saveCategory"
+            android:onClick="createCategory"
             android:text="@string/new_category" />
     </LinearLayout>
 
