--- a/res/layout/category_list_row.xml
+++ b/res/layout/category_list_row.xml
@@ -3,22 +3,28 @@
     android:id="@+id/LinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
         <EditText
-            android:id="@+id/txt_row_category_name"
+            android:id="@+id/edittxt_row_category_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:enabled="false" >
+	    android:visibility="gone"
+	    />
 
-            <requestFocus />
-        </EditText>
+	<TextView
+		    android:id="@+id/txt_row_category_name"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_weight="1"
+		    android:ems="10" />
 
         <Button
             android:id="@+id/btn_row_category_reset"
