Modifies layout properties

--- a/res/layout/activity_categories.xml
+++ b/res/layout/activity_categories.xml
@@ -13,8 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
 	android:layout_height="wrap_content" 
-	android:descendantFocusability="beforeDescendants"
-	android:focusableInTouchMode="true" >
+	>
 
         <EditText
             android:id="@+id/txt_category"
@@ -23,7 +22,6 @@
             android:layout_weight="1"
             android:ems="10"
 	    android:text="@string/name_category"
-	    android:focusable="false" 
 	    android:selectAllOnFocus="true" />
 
         <Button
@@ -38,7 +36,10 @@
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </ListView>
+        android:layout_height="wrap_content" 
+	android:background="@drawable/bg_list"
+	android:choiceMode="singleChoice" 
+	>
+   </ListView>
 
 </LinearLayout>
