--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -13,5 +13,10 @@
         android:id="@+id/exit"
         android:orderInCategory="100"
         android:title="@string/exit"/>
+
+    <item android:id="@+id/statistics"
+        android:orderInCategory="2"
+        android:title="@string/statistics"/>
+    
     
 </menu>
