--- a/res/layout/activity_statistics.xml
+++ b/res/layout/activity_statistics.xml
@@ -8,9 +8,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.counter.StatisticsActivity" >
 
-	<com.github.mikephil.charting.charts.LineChart
-	android:id="@+id/chart"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent" />
+    <LinearLayout
+        android:id="@+id/chart_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        >
+
+    </LinearLayout>
 
 </RelativeLayout>
