--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -14,9 +14,12 @@
         android:orderInCategory="100"
         android:title="@string/exit"/>
 
-    <item android:id="@+id/statistics"
-        android:orderInCategory="2"
-        android:title="@string/statistics"/>
-    
+    <item
+		    android:id="@+id/statistics"
+		    android:orderInCategory="2"
+		    android:title="@string/statistics">
+	    <menu></menu>
+    </item>
+
     
 </menu>
